# acme-ch

./: .gitignore  README.md  render.yaml
control-plane/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.yml  env.default  gunicorn.conf.py  justfile  main.py  manage.py  pyproject.toml
control-plane/acme_ch/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
control-plane/apps/authorization/: admin.py  models.py  urls.py  views.py
control-plane/apps/authorization/migrations/: 0001_initial.py
control-plane/apps/authorization/templates/: base.html  login.html  logout.html  register.html
control-plane/apps/clusters/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
control-plane/apps/clusters/migrations/: 0001_initial.py
control-plane/apps/common/: README.md  models.py  nuon_client.py  validators.py  views.py
control-plane/apps/common/templatetags/: __init__.py
control-plane/apps/dashboard/: urls.py  views.py
control-plane/apps/dashboard/templates/: create-org.html  dashboard-base.html  index.html
control-plane/apps/dashboard/templatetags/: dashboard_filters.py
control-plane/apps/nuon_proxy/: apps.py  urls.py  views.py
control-plane/apps/organizations/: README.md  admin.py  apps.py  aws.py  forms.py  models.py  nuon.py  serializers.py  signals.py  tasks.py  urls.py  views.py
control-plane/apps/organizations/migrations/: 0001_initial.py  (+4 more)
control-plane/docs/: role_delegation.md  tailscale.md  user-flows.md
control-plane/docs/scripts/: app-role.sh  vendor-role.sh
(+69 files in other folders)
